--- a/MobSales.DroidUI/MobSales.DroidUI.csproj
+++ b/MobSales.DroidUI/MobSales.DroidUI.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ErrorDisplayer.cs" />
-    <Compile Include="TitlesFragment.cs" />
+    <Compile Include="View\Fragments\TitlesFragment.cs" />
     <Compile Include="View\DashboardView.cs" />
     <Compile Include="SplashScreen.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
@@ -75,6 +75,12 @@
     </AndroidResource>
     <AndroidResource Include="Resources\Layout\test_frag.axml">
       <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\Layout\InserimentoOdV.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\Layout\InserimentoReso.axml">
+      <SubType>AndroidResource</SubType>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
