--- a/EOS.MvvmExtension/EOS.MvvmCrossExtension.csproj
+++ b/EOS.MvvmExtension/EOS.MvvmCrossExtension.csproj
@@ -37,12 +37,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
+    <Reference Include="Newtonsoft.Json.MonoDroid">
+      <HintPath>..\Newtonsoft.Json\bin\Debug\Newtonsoft.Json.MonoDroid.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Android\Views\MvxFragmentActivityView.cs" />
+    <Compile Include="Android\Views\MvxFragmentView.cs" />
+    <Compile Include="Binding\Android\Views\MvxBindingFragment.cs" />
+    <Compile Include="Binding\Android\Views\MvxBindingFragmentActivityView.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
